# aoc

./: .gitignore  Cargo.toml  LICENSE
aoc22/: Cargo.toml
aoc22/src/: day3.rs  main.rs
aoc22/src/day1/: mod.rs
aoc22/src/day10/: mod.rs
aoc22/src/day11/: mod.rs
aoc22/src/day12/: mod.rs
aoc22/src/day13/: mod.rs
aoc22/src/day14/: mod.rs
aoc22/src/day15/: mod.rs
aoc22/src/day16/: mod.rs
aoc22/src/day17/: mod.rs
aoc22/src/day2/: mod.rs
aoc22/src/day3/: mod.rs
aoc22/src/day4/: mod.rs  test.rs
aoc22/src/day5/: mod.rs
aoc22/src/day6/: mod.rs
aoc22/src/day7/: mod.rs
aoc22/src/day8/: mod.rs
aoc22/src/day9/: mod.rs
aoclib/: Cargo.toml
aoclib-derive/: Cargo.toml
aoclib-derive/src/: lib.rs
aoclib/src/: lib.rs
